Collabration Backend and Frontend
complete backend and front end with user and admin registration.
Blog,Event,Forum,Job are working fine

--- a/MyDesign/WebContent/adminEvent.html
+++ b/MyDesign/WebContent/adminEvent.html
@@ -3,7 +3,7 @@
 			<div class="container">
  
     <hr>
-   <!--  <button type="button" class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#myModal">Add New Event</button> -->
+    <button type="button" class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#myModal">Add New Event</button>
     <h2>All Events</h2>
     <span class="clearfix"></span>
     </hr>
@@ -18,8 +18,8 @@
         <th>Date</th>
          <th>PostedBy</th>
           <th>venue</th>
-          <!-- <th>Edit</th>
-          <th>Delete</th> -->
+          <th>Edit</th>
+          <th>Delete</th>
       </tr>
     </thead>
     <tbody>
@@ -30,8 +30,8 @@
         <td>{{event.eventDate}}</td>
         <td>{{event.usersID}}</td>
          <td>{{event.venue}}</td>
-        <!-- <td><button type="button" class="btn btn-primary btn-sm "  data-toggle="modal" data-target="#editevent" ng-click="editEvent(event)">Edit</button></td>
-         <td><button type="button" class="btn btn-danger btn-sm " data-toggle="modal" data-target="#deleteevent" ng-click="editEvent(event)">Delete</button></td> -->
+        <td><button type="button" class="btn btn-primary btn-sm "  data-toggle="modal" data-target="#editevent" ng-click="editEvent(event)">Edit</button></td>
+         <td><button type="button" class="btn btn-danger btn-sm " data-toggle="modal" data-target="#deleteevent" ng-click="editEvent(event)">Delete</button></td>
       </tr>
        </tbody>
   </table>
