Back end and front end
chat module is working and implemented the forum, jobs and included the
model class of chat.
I have used loadash,sockjs and websocket.
blog,event,forum and job are working fine.

--- a/MyDesign/WebContent/admin.html
+++ b/MyDesign/WebContent/admin.html
@@ -1,2 +1,19 @@
-this is admin home................
-{{message}}
+<html>
+<head>
+<style>
+img{
+	display: block;
+	margin: 0 auto;
+}
+</style>
+</head>
+<body>
+
+
+
+<img src="images/giphy.gif" align="middle">
+
+</body>
+</html>
+
+
