--- a/MyDesign/WebContent/adminBlog.html
+++ b/MyDesign/WebContent/adminBlog.html
@@ -17,7 +17,7 @@
           <th>content</th>
            <th>category</th>
           <th>View for approval</th>
-          <th>Edit</th>
+          <!-- <th>Edit</th> -->
            <th>Delete</th>
       </tr>
     </thead>
@@ -31,7 +31,7 @@
          <td>{{blog.category}}</td>
         <td><button type="button" class="btn btn-primary btn-sm "  data-toggle="modal" data-target="#viewblog" ng-click="editBlog(blog)">View</button></td>
         
-         <td><button type="button" class="btn btn-primary btn-sm "  data-toggle="modal" data-target="#editblog" ng-click="editBlog(blog)">Edit Blog</button></td>
+    <!--      <td><button type="button" class="btn btn-primary btn-sm "  data-toggle="modal" data-target="#editblog" ng-click="editBlog(blog)">Edit Blog</button></td> -->
           <td><button type="button" class="btn btn-danger btn-sm " data-toggle="modal" data-target="#deleteblog" ng-click="editBlog(blog)">Delete</button></td>
       </tr>
        </tbody>
