--- a/MyDesign/WebContent/logout.html
+++ b/MyDesign/WebContent/logout.html
@@ -1,6 +1,19 @@
+<html>
+<head>
+<style>
+img{
+	display: block;
+	margin: 0 auto;
+}
+</style>
+</head>
+<body>
 
 
 
-<h4>
-Logout
-</h4>
+<img src="images/v8.gif" align="middle">
+
+</body>
+</html>
+
+
