--- a/MyDesign/WebContent/adminJobs.html
+++ b/MyDesign/WebContent/adminJobs.html
@@ -19,8 +19,8 @@
     <th>Skills Required</th>
     <th>Eligibility Criteria</th>
     <th>Date of interview</th>
-     <th>Approve</th>
-      <th>Disapprove</th>
+     <th>Edit</th>
+      <th>Remove</th>
     </tr>
         <tr ng-repeat="resource in jobs | filter:search">
              <td>{{resource.jobId}}</td>
@@ -30,7 +30,7 @@
             <td>{{ resource.eligibilityCriteria}}</td>
             <td>{{ resource.dateOfInterview}}</td>
             <td><button type="button" class="btn btn-primary btn-sm "  data-toggle="modal" data-target="#editjob" ng-click="editJob(resource)">Edit</button></td>
-         <td><button type="button" class="btn btn-danger btn-sm " data-toggle="modal" data-target="#deletejob" ng-click="editJob(resource)">Delete</button></td>
+         <td><button type="button" class="btn btn-danger btn-sm " data-toggle="modal" data-target="#deletejob" ng-click="editJob(resource)">Remove</button></td>
         </tr>    
     </table>
   
