--- a/MyDesign/WebContent/userHome.html
+++ b/MyDesign/WebContent/userHome.html
@@ -1,2 +1,19 @@
-user Home
-{{message}}
+<html>
+<head>
+<style>
+img{
+	display: block;
+	margin: 0 auto;
+}
+</style>
+</head>
+<body>
+
+
+
+<img src="images/home.gif" align="middle">
+
+</body>
+</html>
+
+
