--- a/MyDesign/WebContent/aboutus.html
+++ b/MyDesign/WebContent/aboutus.html
@@ -21,6 +21,8 @@
                     <img src="images/vijay.jpg" class="img-responsive" alt="">
                 </div>
                 <div class="col-sm-6 padding-top">
+                <p>This is a collaboration Project with backend and frontend with Maven, RESTful API, Bootstrap, HTML, CSS, JS, AngularJS, Oracle, Tomcat webserver.</p>
+                
                     <p>I love Web Design & Technology.
 I possess a highly skilled work force. My
 goal is to produce great work with positive energy. I apply my own artistic sense and abilities to develop my designs.</p>
