--- a/MyDesign/WebContent/blog.html
+++ b/MyDesign/WebContent/blog.html
@@ -11,15 +11,15 @@
     </hr>
     <table class="table table-striped">
     <thead>
-      <tr>
-      <th>blog id</th>
+      <tr align="center">
+      <th>Blog ID</th>
         <th>Title</th>
         <th>Content</th>
         <th>Date</th>
          <th>PostedBy</th>
           <th>category</th>
-          <th>Edit</th>
-          <th>Delete</th>
+          <th>View</th>
+          <!-- <th>Delete</th> -->
           <th>Status</th>
       </tr>
     </thead>
@@ -28,11 +28,11 @@
       <td>{{blog.blogId}}</td>
         <td>{{blog.title}}</td>
         <td>{{blog.content}}</td>
-        <td>{{blog.dateOfCreation}}</td>
+        <td>{{blog.blogCreationDate}}</td>
         <td>{{blog.usersID}}</td>
          <td>{{blog.category}}</td>
         <td><button type="button" class="btn btn-primary btn-sm "  data-toggle="modal" data-target="#viewblog" ng-click="editBlog(blog)">View</button></td>
-         <td><button type="button" class="btn btn-danger btn-sm " data-toggle="modal" data-target="#deleteblog" ng-click="editBlog(blog)">Delete</button></td>
+         <!-- <td><button type="button" class="btn btn-danger btn-sm " data-toggle="modal" data-target="#deleteblog" ng-click="editBlog(blog)">Delete</button></td> -->
          <td>
          <div ng-if="blog.approved==1">
             	<button type="button" class="btn btn-primary btn-sm">Posted</button>
@@ -45,7 +45,13 @@
          </div>
          
          </td>
-         
+         <td>
+       <!--   <form>
+         <input type="text" class="form-control" id="newBlogComment.blogComment" placeholder="blogComment"  autofocus=""  ng-model="newBlogComment.blogComment"/>
+ 	     		<input ng-model = "newBlogComment.blogID"> 
+          <button type="submit" class="btn btn-primary btn-lg" ng-click="addBlogComment()" data-dismiss="modal">Post</button>
+         </form>
+         </td> -->
       </tr>
        </tbody>
   </table>
@@ -146,6 +152,14 @@
                <input type="date" class="form-control" id="dateOfCreation" placeholder="dateOfCreation" required="" autofocus=""  ng-model="blogDataToEdit.dateOfCreation"/>
     </div>
   </div> -->
+  
+  
+   <div class="form-group">
+    <label class="control-label col-sm-2" for="blogCreationDate">blogCreationDate:</label>
+    <div class="col-sm-10"> {{blogDataToEdit.blogCreationDate}}
+      <!-- <textarea class="form-control" id="content" ng-model="blogDataToEdit.content"></textarea> -->
+    </div>
+  </div>
   
   
   
