--- a/MyDesign/WebContent/chat.html
+++ b/MyDesign/WebContent/chat.html
@@ -1,9 +1,48 @@
 <html>
 <head>
+
+
+
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Home | Triangle</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet"> 
+    <link href="css/lightbox.css" rel="stylesheet"> 
+	<link href="css/main.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">
+
+    <!--[if lt IE 9]>
+	    <script src="js/html5shiv.js"></script>
+	    <script src="js/respond.min.js"></script>
+    <![endif]-->       
+    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+
+
+
+
+
+
+
+
+
 <style>
 body  {
-    background-image: url("images/c1.gif");
+    background-image: url("images/chat1.gif");
     background-color: #00cccccc;
+}
+
+p.obs {
+	font-style: oblique;
+	color: #1076AC; 
 }
 </style>
 </head>
@@ -25,18 +64,26 @@ body  {
 	
 	
 	<div ng-repeat="message in messages | orderBy:'time':true" class="message">
+      <p class="obs">	
+      <font size="4">
       	<span>{{message.username}}</span>
         <time>{{message.time | date:'HH:mm'}}</time>
         <span ng-class="{self: message.self}">{{message.message}}</span>
+      </font>
+      </p>
       </div>
 	
 	
 	
       <form ng-submit="addMessage()" name="messageForm">
-        <input type="text" placeholder="Send a message..." ng-model="message" />
+         <div class="form-group">
+        <input class="form-control" type="text" placeholder="Send a message..." ng-model="message" />
+        </div>
         <div class="info">
           <span class="count" ng-bind="max - message.length" ng-class="{danger: message.length > max}">140</span>
-          <button ng-disabled="message.length > max || message.length === 0">Send</button>
+          <div class="form-group">
+          <button class="btn btn-submit" ng-disabled="message.length > max || message.length === 0">Send</button>
+          </div>
         </div>
       </form>
       <hr />
@@ -76,7 +123,13 @@ body  {
 
 
 
-
+   <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/lightbox.min.js"></script>
+    <script type="text/javascript" src="js/wow.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>   
+    
+    
     <script src="sockjs/sockjs.min.js" type="text/javascript"></script>
     <script src="stomp-websocket/lib/stomp.min.js" type="text/javascript"></script>
     <script src="angular/angular.min.js"></script>
